kubernetes/Resources/organization-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-v2
spec:
  selector:
    matchLabels:
      app: organization
      version: v2
  template:
    metadata:
      labels:
        app: organization
        version: v2
    spec:
      containers:
      - name: organization
        image: containersoga/hrorganization
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
