kubernetes/Resources/department-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department
spec:
  replicas: 2
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      containers:
      - name: department
        image: containersoga/hrdepartment
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
---
apiVersion: v1
kind: Service
metadata:
  name: department
  labels:
    app: department
spec:
  type: LoadBalancer
  selector:
    app: department
  ports:
  - port: 5000
    targetPort: 80
    protocol: TCP
    name: http
