kubernetes/Resources/employee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
spec:
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - name: employee
        image: containersoga/hremployee
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
---
apiVersion: v1
kind: Service
metadata:
  name: employee
  labels:
    app: employee
spec:
  selector:
    app: employee
  ports:
  - port: 5002
    targetPort: 80
    protocol: TCP
    name: http
