kubernetes/Resources/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: containersoga/hrfront
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
