kubernetes/Resources/organization-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
spec:
  selector:
    matchLabels:
      app: organization
      version: v1
  template:
    metadata:
      labels:
        app: organization
        version: v1
    spec:
      containers:
      - name: organization
        image: containersoga/hrorganization
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 100
          timeoutSeconds: 200
---
apiVersion: v1
kind: Service
metadata:
  name: organization
  labels:
    app: organization
spec:
  selector:
    app: organization
  ports:
  - port: 5010
    targetPort: 80
    protocol: TCP
    name: http
